sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:12: error: ')' expected but ';' found.
			lastCase = i-(j-1);
                                          ^